# outsourced-computing

./: README.md
monero-poc/verifier/: README.md  main.cpp
pool/listener/: CMakeLists.txt  K12AndKeyUtil.h  README.md  connection.h  keyUtils.cpp  main.cpp  structs.h
pool/sender/: CMakeLists.txt  README.md
pool/sender/src/: Qiner.cpp  Sender.cpp  keyUtils.cpp
pool/xmr-stratum/: README.md  admin.html  index.html  index.js  package.json  xmr-stratum.js
pool/xmr-stratum/config/: config.js
pool/xmr-stratum/network/: MinerServer.js  ShareDistributionServer.js  TaskSourceClient.js
pool/xmr-stratum/services/: HttpServer.js  PostgreSQLManager.js  StatisticsManager.js
pool/xmr-stratum/state/: ComputorManager.js  JobManager.js  MetricsManager.js  MinerManager.js  NonceManager.js  ShareManager.js  StateManager.js
pool/xmr-stratum/utils/: FileHelper.js  NetworkHelper.js  logger.js
tools/: nanopool-epoch-sharecount.py
tools/XMRig-Proxy-Logger/: README.md  xmrig-logger.py
tools/nanopool/: README.md
