cmake_minimum_required(VERSION 3.5)
project(OCVerifier CXX)
set (CMAKE_CXX_STANDARD 11)
if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else()
	SET(CXX_OCVERIFIER_FLAGS "-Wunused-variable")
endif()
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CXX_OCVERIFIER_FLAGS}")
SET(FILES ${CMAKE_SOURCE_DIR}/connection.cpp
		${CMAKE_SOURCE_DIR}/keyUtils.cpp
)
add_subdirectory(RandomX)
ADD_EXECUTABLE(listener main.cpp ${FILES})
target_link_libraries(listener pthread randomx)
set_property(TARGET listener PROPERTY COMPILE_WARNING_AS_ERROR ON)
